# eeg-device-firmware

./: Cargo.toml
ads1299/: Cargo.toml
ads1299/src/: ads1299_driver.rs  ads1299_low_driver.rs  lib.rs
data-center/: Cargo.toml
data-center/src/: data_center.rs  lib.rs
pc-communications-hal/: Cargo.toml
volks-fw/: Cargo.toml
volks-fw/src/: main.rs
