[package]
edition = "2021"
name = "ads1299"
version = "0.1.0"
authors = ["Graham Long <longevity_software@mail.com>"]
license-file = "../LICENSE"

[lib]
name = "ads1299"
test = false
bench = false

[features]
default = []
heap = ["base/heap"] # Enables the heap feature in the base crate

[dependencies]
base = { version = "0.1.0", path = "../base" }
