[package]
edition = "2021"
name = "data-center"
version = "0.1.0"
authors = ["Graham Long <longevity_software@mail.com>"]
license-file = "../LICENSE"

[lib]
name = "data_center"
test = false
bench = false

[features]
default = []
heap = ["base/heap"] # Enables the heap feature in the base crate

[dependencies]
base = { version = "0.1.0", path = "../base" }
